--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <button class="gameOverGrid btn">Play</button>
     </section>
-    <section id="gameBoard"></section>
+    <section id="gameBoard" class="board"></section>
 </div>
 <script src="snake.js"></script>
 </body>
